# biotopg

./: .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  pyproject.toml
LICENSES/: MIT.txt
biotopg/: __init__.py  biotopg.py
biotopg/builders/: bio_hybrid_vector_concept_db.py  biochuncking.py  sql_db.py  storage.py
biotopg/builders/llm_modules/: biohypergraph_extractor.py
biotopg/rag/: global_query.py  hybrid_rag.py  local_query.py  query_manager.py  utils.py
biotopg/utils/: biomodels.py  llm.py  logger.py
examples/: excluded_ontology_ids.json
examples/demonstrations/: demo_hyperproposition_with_ner.json.json
scripts/: populate_collection.py
